# 25HEC001_raytracing

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  benchmark.sh  benchmark_results.csv  install-hooks.sh  scene.json
_docs/: article.md
cmake-presets/: linux.json  macos.json  windows.json
hooks/: README.md  commit-msg  pre-commit
src/: main.cpp
src/core/: CMakeLists.txt  aabb.hpp  bvh_node.hpp  camera.cpp  camera.hpp  color.hpp  hitrecord.cpp  hitrecord.hpp  hittable.hpp  hittable_list.hpp  hitteble_list.cpp  ray.cpp  ray.hpp
src/hitrecord/: CMakeLists.txt  hitrecord.cpp  hitrecord.hpp
src/hittable/: CMakeLists.txt  hittable.hpp
src/image/: CMakeLists.txt  image.cpp  image.hpp
src/lib/: CMakeLists.txt  lib.hpp
src/lodepng/: CMakeLists.txt
src/material/: CMakeLists.txt  material.cpp  material.hpp
src/maths/: CMakeLists.txt  Color.cpp  constants.hpp  interval.hpp  vector3.cpp  vector3.hpp
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp
src/shape/: CMakeLists.txt  cube.cpp  cube.hpp  plane.cpp  plane.hpp  read_mesh.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/sphere/: CMakeLists.txt  sphere.cpp  sphere.hpp
src/tests/: CMakeLists.txt  README.md  vector3_tests.cpp
src/timer/: CMakeLists.txt  chrono_timer.cpp  chrono_timer.hpp
